[package]
name = "robloxcookielogger"
version = "0.1.0"
edition = "2021"
authors = ["Nats", "https://github.com/Natslol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["macros"] }
winreg = "0.10.1"
serde_json = "1.0.82"
reqwest = { version = "0.11.11", features = ["blocking", "json"]}
